@@ -72,6 +72,14 @@ public:
     };
     Q_DECLARE_FLAGS(RotationBehaviorFlags, RotationBehaviorFlag)
 
+    enum AlbumDateSource
+    {
+        NewestItemDate = 0,
+        OldestItemDate,
+        AverageDate,
+        FolderDate
+    };
+
 public:
 
     explicit MetaEngineSettingsContainer();
@@ -113,6 +121,8 @@ public:
     MetaEngine::MetadataWritingMode metadataWritingMode;
 
     RotationBehaviorFlags           rotationBehavior;
+
+    AlbumDateSource                 albumDateFrom;
 
     QStringList                     sidecarExtensions;
 
